# fixed-bitset

./: Cargo.toml  README.md
src/: lib.rs  primitive.rs
